# Projects

./: Minesweeper.py  README.md
Assembly Projects/Functions assignment/: func_select.s  main.c  pstring.s
Assembly Projects/Guessing game/: ass1.s
BrickOut/src/: Ass5Game.java
BrickOut/src/Collision/: CollisionInfo.java  Velocity.java
BrickOut/src/GameCore/: BallRemover.java  BlockRemover.java  Counter.java  Game.java  GameEnvironment.java  ScoreIndicator.java  ScoreTrackingListener.java
BrickOut/src/Geometry/: Line.java  Point.java  Rectangle.java
BrickOut/src/Interfaces/: Collidable.java  HitListener.java  HitNotifier.java  Sprite.java
BrickOut/src/Sprites/: Ball.java  Block.java  Paddle.java  SpriteCollection.java
Gmail-Project-Part-2/: DockerfileTests  README.md  details.txt  docker-compose.yml
Gmail-Project-Part-2/src/: FileFunctions.cpp
Gmail-Project-Part-2/src/client/: Dockerfile  client.py
Gmail-Project-Part-2/src/server/: CMakeLists.txt  Dockerfile
Gmail-Project-Part-2/src/server/src/: AddUrlCommand.cpp  AddUrlCommand.h  App.cpp  App.h  BloomFilter.cpp  BloomFilter.h  CheckUrlCommand.cpp  CheckUrlCommand.h  DeleteUrlCommand.cpp  DeleteUrlCommand.h  FileFunctions.cpp  FileFunctions.h  ICommand.cpp  ICommand.h  InputValidity.cpp  InputValidity.h  server.cpp
Gmail-Project-Part-2/tests/: CMakeLists.txt  DeleteTests.cpp  PrintTests.cpp  ServerTests.cpp  checkTests.cpp
Minesweeper/: Minesweeper.py
